objects/copado__Theme__c.object
<CustomObject>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Theme_Details__c</fullName>
        <label>Theme Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>copado__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>